Trying to reduce warning count, removing some unused code, refactor some code to make it easier to test. Fixed TestUtils constructor with side effects (populating static properties for usage in static method calls, refactored to use instance instead). Some more unit tests for domain objects, and refactoring and fixing for making tested domain objects consistent across relations. Replacing some nullables with optionals, resulting in some refactoring to use optionals and some orElse(null) other places (creating a few warnings, which makes no actual difference from old code). Fixed some constructors of pivot objects removing side effects and instead forcing population of entity relations outside constructor.